--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Best WebPg</title>
 </head>
-
 <body>
     <header class="header">
         <div class="container">
@@ -55,34 +54,22 @@
                 </div>
                 <div class="row"><div class="col">
                     <h3>Mississippi Coding Academy</h3>
-                    <p>I am laerning to code at the mississippi coding academy. Here, I will learn web development as
-                        well as back end Programming. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo
-                        nulla aut odit nisi neque voluptatibus rem quia perferendis, deleniti doloribus? Lorem ipsum
-                        dolor, sit amet consectetur adipisicing elit. Atque praesentium explicabo corrupti, itaque
-                        obcaecati unde necessitatibus tempora ea in, sapiente repellendus eveniet. Distinctio voluptate
-                        sequi sapiente, at in veniam facere.</p>
+                    <p>I am laerning to code at the mississippi coding academy. Here, I am learning web development as
+                        well as programming.</p>
 
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h3>Hobbies</h3>
-                        <p>I enjoy things such as coding, chess, and music. Lorem, ipsum dolor sit amet consectetur
-                            adipisicing elit. Ullam atque quis a iusto nesciunt accusantium ratione maiores earum!
-                            Consequatur doloremque, officia asperiores nisi excepturi ipsa itaque doloribus nihil, optio
-                            maiores a! Iure beatae fuga, sapiente laboriosam iste corporis nulla quos impedit dicta
-                            voluptates officiis debitis laborum quia rem ipsum cupiditate!</p>
+                        <p>I enjoy things such as coding, chess, and music.</p>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="col">
                         <h3>Programming Languages I'm Currently Learning</h3>
-                        <p>I am about to start learning Javascript and I dabble a litle bit in GO. Lorem ipsum, dolor sit
-                            amet consectetur adipisicing elit. Blanditiis officiis quas magnam voluptates iste earum, veniam
-                            numquam adipisci nulla mollitia, voluptatibus cum dolor! Necessitatibus maiores fuga,
-                            repellendus adipisci eius suscipit? Assumenda quae tempore ullam maiores quo possimus, inventore
-                            laborum molestias soluta consectetur maxime error sit aut necessitatibus aspernatur qui amet.
+                        <p>I can creat a website using html and css. I am about to start learning Javascript and I dabble a litle bit in GO.
                         </p>
                     </div>
                 </div>
@@ -90,39 +77,66 @@
                     <div class="col">
                         <ul class="nav nav-buttons justify-content-center">
                             <li><button><a href="#">Back To Top</a></button></li>
-                            <li><button><a href="#about">About Me</a></button></li>
-                            <li><button><a href="#past-work">Projects So Far</a></button></li>
+                            <li><button><a href="#past-work">Projects</a></button></li>
+                            <li><button><a href="#contact">Contact Me</a></button></li>
                         </ul>
                     </div>
                 </div> 
             </div>
         
         </section>
-        <section class="projects" id="past-work">
-            <h2>Projects</h2>
-            <h3></h3>
-            <ul class="project-list">
-                <li><img src="media/detroix.jpg" alt="doh">
-                    <h4>Description</h4>
-                    <p>My first project and first experience with a carousel. This project reflects a motivational
-                        homepage.</p>
-                </li>
-                <li><img src="media/bloom.jpg" alt="doh">
-                    <h4>Description</h4>
-                    <p>This project was the first to have me use a bunch of new elements for a page. This is a landing
-                        page for bloom and was my first page to use bootstrap with as well as</p>
-                </li>
-                <li><img src="media/desktop-design.jpg" alt="doh">
-                    <h4>Description</h4>
-                    <p>This is the most recent project I did called "restaurant". This project was probably the most
-                        challenging, yet the most helpful for my learning because this project required us to create an
-                        about page as well as a home page. As the name suggests, this project reflects a fake resturant
-                        page.</p>
-                </li>
+        <div class="container" class="projects-list">
+            <section class="projects" id="past-work">
+                <h2>Projects</h2>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card">
+                        <img class="img-fluid" src="media/detroix.jpg" alt="doh">
+                        <div class="card-body">
+                            <h4 class="card-title">Detroix</h4>
+                            <p class="card-text">
+                                My first project and first experience with a carousel. This project reflects a motivational
+                            homepage
+                            </p>
+                            <a href="https://github.com/UZGNG/Detroix_But_Better" class="btn btn-primary">View in GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img class="img-fluid" src="media/bloom.jpg" alt="doh">
+                        <div class="card-body">
+                            <h4 class="card-title">Bloom</h4>
+                            <p class="card-text">
+                                This project was the first to have me use a bunch of new elements for a page. This is a landing
+                                page for bloom and was my first page to use bootstrap.
+                            </p>
+                            <a href="https://github.com/UZGNG/Bloom" class="btn btn-primary">View in GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img class="img-fluid" src="media/desktop-design.jpg" alt="doh">
+                        <div class="card-body">
+                            <h4 class="card-title">Restaurant</h4>
+                            <p class="card-text">
+                                This is the most recent project I did called "restaurant". This project was probably the most
+                                challenging, yet the most helpful for my learning because this project required us to create an
+                                about page as well as a home page. As the name suggests, this project reflects a fake resturant
+                                page.
+                            </p>
+                            <a href="https://github.com/UZGNG/Restaurant" class="btn btn-primary">View in GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ul class="nav button-list">
                 <li><button><a href="#">Back To Top</a></button></li>
                 <li><button><a href="#about">About Me</a></button></li>
                 <li><button><a href="#contact">Contact Me</a></button></li>
             </ul>
+        </div>
         </section>
         <section class="contact-me" id="contact">
             <div class="container">
@@ -138,16 +152,16 @@
                 <div class="row">
                     <div class="col">
                         <ul>
-                            <li>
+                            <li class="contact-links"> 
                                 Phone: +1 (601) 946-3660
                             </li>
-                            <li>
+                            <li class="contact-links">
                                 Email: <a href="mailto:jack@mscodingacademies.org">jack@mscodingacademies.org</a>
                             </li>
-                            <li>
+                            <li class="contact-links">
                                 GitHub: <a href="https://github.com/UZGNG" target="_blank">UZGNG</a>
                             </li>
-                            <li>
+                            <li class="contact-links">
                                 LinkedIn: <a href="https://www.linkedin.com/in/jack-noel-944064222/" target="_blank">Jack Noel</a>
                             </li>
                         </ul>
