your message projects page fixed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="row"><div class="col">
                     <h3>Mississippi Coding Academy</h3>
-                    <p>I am laerning to code at the mississippi coding academy. Here, I am learning web development as
+                    <p>I am learning to code at the mississippi coding academy. Here, I am learning web development as
                         well as programming.</p>
 
                     </div>
@@ -89,7 +89,7 @@
             <section class="projects" id="past-work">
                 <h2>Projects</h2>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <img class="img-fluid" src="media/detroix.jpg" alt="doh">
                         <div class="card-body">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <img class="img-fluid" src="media/bloom.jpg" alt="doh">
                         <div class="card-body">
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <div class="card">
                         <img class="img-fluid" src="media/desktop-design.jpg" alt="doh">
                         <div class="card-body">
