added pfp and fixed projects spacing

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li class="nav-item"><button><a href="#past-work" class="nav-link">Projects So Far</a></button></li>
                             <li class="nav-item"><button><a href="#contact" class="nav-link">Contact Me</a></button></li>
                         </ul>
-                        <img src="https://via.placeholder.com/250x350" alt="placeholder img" class="home-pfp" />
+                        <img src="media/IMG_9373.jpg" alt="placeholder img" class="home-pfp" />
                     </section>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     </div>
                 </div> 
         </section>
-    </main>3
+    </main>
 </body>
 
 </html>
